# stellar-insights

./: TODO.md  WORK_COMPLETED.md
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  cache_middleware.rs  database.rs  env_config.rs  handlers.rs  lib.rs  logging.rs  main.rs  ml.rs  models.rs  monitor.rs  rate_limit.rs  websocket.rs
backend/src/api/: anchors.rs  anchors_cached.rs  corridors.rs  corridors_cached.rs  fee_bump.rs  liquidity_pools.rs  metrics_cached.rs  sep24_proxy.rs  sep31_proxy.rs  transactions.rs
backend/src/auth/: oauth.rs  sep10_simple.rs
backend/src/db/: aggregates.rs
backend/src/models/: corridor.rs
backend/src/observability/: tracing.rs
backend/src/rpc/: stellar.rs
backend/src/services/: aggregation.rs  governance.rs  realtime_broadcaster.rs  snapshot.rs
backend/tests/: corridor_metrics_test.rs  validation_test.rs
contracts/: Cargo.toml
contracts/access-control/src/: lib.rs
contracts/analytics/src/: lib.rs
contracts/benches/: Cargo.toml
contracts/benches/benches/: contract_benchmarks.rs
frontend/: .gitignore  CONSOLE_LOGGING_QUICK_REFERENCE.md  CONSOLE_LOGGING_REMOVAL_GUIDE.md  CONSOLE_LOGGING_RESOLUTION.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/public/: manifest.json
frontend/src/__tests__/: pwa.test.tsx  setup.ts
frontend/src/app/: layout.tsx
frontend/src/contexts/: KeyboardShortcutsContext.tsx
frontend/src/hooks/: useChartExport.ts
frontend/src/lib/: analytics-api.ts  chart-export.ts  pwa.ts
frontend/src/services/: sep10Auth.ts
(+4 files in other folders)
